# Brain_Tumor_Detection_website1

./: .replit  README.md  app.py  pyproject.toml  python.py  replit.nix
templates/: home.html
